--- a/templates/test/test.html
+++ b/templates/test/test.html
@@ -1,3 +1,25 @@
 {$name}
 
 mememememe
+
+
+<button id="fat-btn" data-loading-text="loading..." class="btn btn-primary">载入状态</button>
+              
+              
+<div class="accordion-group" style="width:400px">
+	<div class="accordion-heading">
+	  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+	    国土问题
+	  </a>
+	</div>
+	<div id="collapseOne" class="accordion-body in" style="height: auto;">
+        <div class="accordion-inner">
+前一段时间一个段子说，某国的网民在因国土问题与中国网民争吵时说，我要打到北京，中国的网民非常淡然地回应，就你那经济水平，交得起过路费吗？这两天新的段子说，李白要是活在今天的话，估计一大半以上他的诗根本写不出来，因为名山大川的门票他根本买不起。
+        </div>
+	</div>
+</div>    
+
+<script type="text/javascript">
+$('#fat-btn').button('loading')
+
+</script>
