--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -2,22 +2,28 @@
 <html lang="zh-CN">
     <head>
 		<meta charset="utf-8">
-		<title></title>        
+		<title>{$title}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Le styles -->
-		<link href="/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
-		<link href="/css/global.css" media="screen" rel="stylesheet" type="text/css">
-		<link href="/css/style.css" media="screen" rel="stylesheet" type="text/css">
-		<link href="/css/bootstrap-responsive.min.css" media="screen" rel="stylesheet" type="text/css">
-		<link href="/images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+		<link href="{$smarty.const.__CSS_PATH}bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
+		<link href="{$smarty.const.__CSS_PATH}global.css" media="screen" rel="stylesheet" type="text/css">
+		<link href="{$smarty.const.__CSS_PATH}bootstrap-responsive.min.css" media="screen" rel="stylesheet" type="text/css">
+		<link href="{$smarty.const.__IMG_PATH}favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
 		<!-- Scripts -->
-		<script type="text/javascript" src="/js/jquery.min.js"></script>
-		<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="{$smarty.const.__JS_PATH}jquery.min.js"></script>
+		<script type="text/javascript" src="{$smarty.const.__JS_PATH}bootstrap.min.js"></script>
 		<!--[if lt IE 9]><script type="text/javascript" src="/js/html5.js"></script><![endif]-->                                      
 	</head>
 <body>
+<div id="stage">
+	<div id="header" class="row">
+		<div class="span4">...</div>
+	  	<div class="span8">...</div>
+	</div>
+	
+	{$content}
 
-{$content}
+</div>
 
 </body>
 </html>
