--- a/templates/error/404.html
+++ b/templates/error/404.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=GB18030">
-<title>Insert title here</title>
-</head>
-<body>
+<div class="alert alert-block" style="margin-top: 30px;">
+     <h4 class="alert-heading">不要慌张！！！</h4>
+     <p>
+  		这是一个404页面。
+	</p>
+</div>
 
 
-
-
-</body>
-</html>
