adjust before public

--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -21,54 +21,9 @@
 	</head>
 <body>
 <div id="stage">
-	<div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="./index.html">Bootstrap</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="">
-                <a href="./index.html">概述</a>
-              </li>
-              <li class="active">
-                <a href="./scaffolding.html">框架</a>
-              </li>
-              <li class="">
-                <a href="./base-css.html">基础CSS</a>
-              </li>
-              <li class="">
-                <a href="./components.html">组件</a>
-              </li>
-              <li class="">
-                <a href="./javascript.html">Javascript插件</a>
-              </li>
-              <li class="">
-                <a href="./less.html">使用LESS</a>
-              </li>
-              <li class="divider-vertical"></li>
-              <li class="">
-                <a href="./download.html">定制</a>
-              </li>
-              <li class="">
-                <a href="./examples.html">例子</a>
-              </li>
-	      <li class="">
-                <a href="./wrongway.html">译者言</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-	
 	<div id="header" class="row-fluid">
-		<div class="span4">...</div>
-	  	<div class="span8">...</div>
+		<div class="span4"></div>
+	  	<div class="span8"></div>
 	</div>
 	{$frontContent}
 	<div id="footer">
