--- a/templates/error/404.html
+++ b/templates/error/404.html
@@ -1,7 +1,7 @@
 <div class="alert alert-block" style="margin-top: 30px;">
-     <h4 class="alert-heading">不要慌张！！！</h4>
+     <h4 class="alert-heading">Do not panic！！！</h4>
      <p>
-  		这是一个404页面。
+  		This is a 404 page.
 	</p>
 </div>
 
