--- a/templates/test/test.html
+++ b/templates/test/test.html
@@ -20,5 +20,5 @@ mememememe
 </div>    
 
 <script type="text/javascript">
-$('#fat-btn').button('loading')
+$('#fat-btn').button('loading');
 </script>
