--- a/public/statics/c/global.css
+++ b/public/statics/c/global.css
@@ -1,6 +1,16 @@
 @CHARSET "UTF-8";
 
 #stage {
-	width: 960px;
-	margin: 5px auto;
+	width: 100%;
+	height: 500px;
+}
+
+#footer .copy{
+	border-top: 1px solid #777;
+	color: #777;
+}
+
+/* common */
+.center {
+	text-align: center;
 }
