--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -20,19 +20,29 @@
 		<!--[if lt IE 9]><script type="text/javascript" src="/js/html5.js"></script><![endif]-->
 	</head>
 <body>
-<div id="stage">
+<div class="container">
 	<div id="header" class="row-fluid">
-		<div class="span4"></div>
-	  	<div class="span8"></div>
+		<div class="span4 offset2">您尚未<a class="jh_pop_login">登录</a> | <a class="jh_pop_reg">注册</a>请猛击</div>
+		<div class="span4 offset2 hide">已登录为 | <a class="jh_pop_quit">退出</a></div>
+	  	<div class="span6"></div>
 	</div>
 	{$frontContent}
-	<div id="footer">
+	<div id="footer" class="row-fluid">
+		<span class="offset2 span8 center copy">Powered by Dlad &copy; 2011 Anti-otaku.net</span>
 	</div>
 </div>
+
 {if $frontJsQueue}
 	{foreach item=jsFile from=$frontJsQueue}
 		<script type="text/javascript" src="{$jsFile}"></script>
 	{/foreach}
 {/if}
+
+<!-- 百年一瞬，不失本心 -->
 </body>
 </html>
+
+
+
+
+
