--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -18,7 +18,7 @@
 		<!-- Scripts -->
 		<script type="text/javascript" src="{$smarty.const.__JS_PATH}jquery.min.js"></script>
 		<script type="text/javascript" src="{$smarty.const.__JS_PATH}bootstrap.min.js"></script>
-		<!--[if lt IE 9]><script type="text/javascript" src="/js/html5.js"></script><![endif]-->
+		<!--[if lt IE 9]><script type="text/javascript" src="{$smarty.const.__JS_PATH}html5.js"></script><![endif]-->
 		{if $frontJsQueue}
 			{foreach item=jsFile from=$frontJsQueue}
 				<script type="text/javascript" src="{$jsFile}"></script>
