--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -2,28 +2,27 @@
 <html lang="zh-CN">
     <head>
 		<meta charset="utf-8">
-		<title>{$frontTitle}</title>
+		<title>{#$frontTitle#}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Le styles -->
-		<link href="{$smarty.const.__CSS_PATH}bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
-		<link href="{$smarty.const.__CSS_PATH}bootstrap-responsive.min.css" media="screen" rel="stylesheet" type="text/css">
-		<link href="{$smarty.const.__CSS_PATH}global.css" media="screen" rel="stylesheet" type="text/css">
-		<link href="{$smarty.const.__IMG_PATH}favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
-		{if $frontCssQueue}
-			{foreach item=cssFile from=$frontCssQueue}
-				<link href="{$cssFile}" media="screen" rel="stylesheet" type="text/css">
-			{/foreach}
-		{/if}
-		
+		<link href="{#$smarty.const.__CSS_PATH#}bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
+		<link href="{#$smarty.const.__CSS_PATH#}bootstrap-responsive.min.css" media="screen" rel="stylesheet" type="text/css">
+		<link href="{#$smarty.const.__CSS_PATH#}global.css" media="screen" rel="stylesheet" type="text/css">
+		<link href="{#$smarty.const.__IMG_PATH#}favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+		{#if $frontCssQueue#}
+			{#foreach item=cssFile from=$frontCssQueue#}
+				<link href="{#$cssFile#}" media="screen" rel="stylesheet" type="text/css">
+			{#/foreach#}
+		{#/if#}
 		<!-- Scripts -->
-		<script type="text/javascript" src="{$smarty.const.__JS_PATH}jquery.min.js"></script>
-		<script type="text/javascript" src="{$smarty.const.__JS_PATH}bootstrap.min.js"></script>
-		<!--[if lt IE 9]><script type="text/javascript" src="{$smarty.const.__JS_PATH}html5.js"></script><![endif]-->
-		{if $frontJsQueue}
-			{foreach item=jsFile from=$frontJsQueue}
-				<script type="text/javascript" src="{$jsFile}"></script>
-			{/foreach}
-		{/if}
+		<script type="text/javascript" src="{#$smarty.const.__JS_PATH#}jquery.min.js"></script>
+		<script type="text/javascript" src="{#$smarty.const.__JS_PATH#}bootstrap.min.js"></script>
+		<!--[if lt IE 9]><script type="text/javascript" src="{#$smarty.const.__JS_PATH#}html5.js"></script><![endif]-->
+		{#if $frontJsQueue#}
+			{#foreach item=jsFile from=$frontJsQueue#}
+				<script type="text/javascript" src="{#$jsFile#}"></script>
+			{#/foreach#}
+		{#/if#}
 	</head>
 <body>
 <div class="container">
@@ -32,7 +31,7 @@
 		<div class="span4 offset2 hide">已登录为 | <a class="jh_pop_quit">退出</a></div>
 	  	<div class="span6"></div>
 	</div>
-	{$frontContent}
+	{#$frontContent#}
 	<div id="footer" class="row-fluid">
 		<span class="offset2 span8 center copy">Powered by Dlad &copy; 2011 Anti-otaku.net</span>
 	</div>
@@ -40,8 +39,3 @@
 <!-- 百年一瞬，不失本心 -->
 </body>
 </html>
-
-
-
-
-
