--- a/templates/layout/layout_base_html.html
+++ b/templates/layout/layout_base_html.html
@@ -9,25 +9,25 @@
 		<link href="{$smarty.const.__CSS_PATH}bootstrap-responsive.min.css" media="screen" rel="stylesheet" type="text/css">
 		<link href="{$smarty.const.__CSS_PATH}global.css" media="screen" rel="stylesheet" type="text/css">
 		<link href="{$smarty.const.__IMG_PATH}favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
-		{if $frontCssQueue}
-			{foreach item=cssFile from=$frontCssQueue}
+		{#if $frontCssQueue#}
+			{#foreach item=cssFile from=$frontCssQueue#}
 				<link href="{$cssFile}" media="screen" rel="stylesheet" type="text/css">
-			{/foreach}
-		{/if}
+			{#/foreach#}
+		{#/if#}
 		<!-- Scripts -->
 		<script type="text/javascript" src="{$smarty.const.__JS_PATH}jquery.min.js"></script>
 		<script type="text/javascript" src="{$smarty.const.__JS_PATH}bootstrap.min.js"></script>
 		<!--[if lt IE 9]><script type="text/javascript" src="/js/html5.js"></script><![endif]-->
 		
-		{if $frontJsQueue}
-			{foreach item=jsFile from=$frontJsQueue}
+		{#if $frontJsQueue#}
+			{#foreach item=jsFile from=$frontJsQueue#}
 				<script type="text/javascript" src="{$jsFile}"></script>
-			{/foreach}
-		{/if}
+			{#/foreach#}
+		{#/if#}
 	</head>
 <body>
 <div class="container">
-	{$frontContent}
+	{#$frontContent#}
 </div>
 <!-- 百年一瞬，不失本心 -->
 </body>
